# lineage-trust

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.mlflow  Dockerfile.spark  PROJECT_CONTEXT.md  QUICKSTART_RAG.md  README.md  customer_churn_pipeline.yaml  docker-compose.yml  full_pipeline.yaml  rag_ingestion_pipeline.yaml  requirements.txt
.github/workflows/: trust-e2e.yml
configs/: settings.py
data/: generate_dataset.py
dataset-registry/: README.md
dataset-registry/backend/: app.py  db.py
dataset-registry/openshift/: deploy.sh
docs/: ARCHITECTURE.md  openlineage-integration-findings.md
kind/: deploy-kind.sh  rebuild-registry.sh
kind/base/: configmap.yaml  dataset-registry.yaml  feast-config.yaml  inference-api.yaml  marquez.yaml  minio.yaml  mlflow-db.yaml  mlflow.yaml  postgres.yaml  pvc.yaml  redis.yaml
kind/jobs/: 01-minio-seed.yaml  (+5 more)
local-kind/: README.md  rebuild-registry.sh  setup.sh  teardown.sh
openlineage-oai/: pyproject.toml
openlineage-sdk/: Dockerfile  README.md  pyproject.toml
openlineage-sdk/openlineage_sdk/: __init__.py  client.py  models.py
openshift/: deploy-dsp.sh  deploy.sh  status.sh  test-api.sh  validate-trust.sh
policies/: churn.rego
scripts/: run_all.sh  start_services.sh  test_inference.sh
spire/: README.md  operator-subscription-spire.yaml  spiffe-csi-driver.yaml  spire-agent.yaml  spire-server.yaml
src/: __init__.py  prov_translator.py  spiffe_utils.py
tests/: __init__.py  test_prov_translator.py  test_security_stack.py
wheels/: feast-0.60.1.dev32+g33a2e9542.d20260323-py3-none-any.whl
(+103 files in other folders)
